Expand to Pepper's Portal with daily routines and reminders
- Add daily routines (Fill Toys, Make Dinner) with user assignment
- Add care schedule for grooming (~6 weeks) and vet visits
- Add Simparica Trio reminder (21st of each month)
- Update leaderboard to include activity points
- Create activities and reminders database schema
- Update branding from Poop Portal to Portal

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Pepper's Poop Portal",
+    "name": "Pepper's Portal",
     "short_name": "Pepper",
-    "description": "Track Pepper's bathroom breaks with gamification and love!",
+    "description": "Track Pepper's walks, routines, and care with gamification!",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#fffbeb",
